# aiprojectengineerv3

./: .build_done  .env.example  .gitignore  AGENTS.md  ItpTemplateEditorEnhanced.tsx  README.md  V2_AESTHETIC_PORT_MIGRATION.md  docker-compose.yml  package.json  pnpm-lock.yaml  simple_check.py  start-langgraph-simple.sh  start-langgraph.sh  test-setup.js
itp-templates/: page.tsx
scripts/: web-dev.sh
services/langgraph_v10/: README.md  langgraph.json  pyproject.toml  readme_invoke.md
services/langgraph_v10/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
services/langgraph_v10/src/agent/: __init__.py  action_graph_repo.py  conformance_rule_engine.py  graph.py  standards_extraction_prompt.py
services/langgraph_v10/src/agent/graphs/: document_extraction.py  document_metadata.py  holdpoint_compliance_checker.py  itp_completeness_checker.py  itp_generation.py  itp_generation_rev2.py  jurisdiction_resolver.py  lbs_extraction.py  metadata_generator.py  orchestrator.py  plan_generation.py  plan_generation_agent.py  project_details.py  qse_generation_agent.py  rmp_validator.py  sampling_planner.py  standards_extraction.py  standards_resolver.py  template_variant_selector.py  wbs_extraction.py
services/langgraph_v10/src/agent/prompts/: document_metadata_example.py  document_metadata_prompt.py  itp_generation_prompt_v2.py  lbs_extraction_prompt.py  plan_generation_prompt.py  pqp_prompt.py  project_details_prompt.py  qse_system_prompt.py  wbs_extraction_prompt.py
(+353 files in other folders)
